force-app/main/default/objects/Customer_Account_Modified_Ext__c/Customer_Account_Modified_Ext__c.object-meta.xml
<CustomObject>
    <description>Pull SAP sold/ship to accounts, HIER and Parent Name to assist in reporting.  Data is pulled from SQL database that is modified often to streamline name by parent account.</description>
    <label>Customer Account Modified Ext</label>
    <nameField>
        <label>SAP Unique Account Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Accounts Modified Ext</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>