force-app/main/default/objects/Customer_Account_Modified_Ext__c/fields/Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <length>4</length>
    <required>true</required>
    <type>Text</type>
</CustomField>