force-app/main/default/objects/Customer_Account_Modified_Ext__c/fields/Hierarchy_Id__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Id__c</fullName>
    <label>Hierarchy Id</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>