force-app/main/default/objects/Customer_Account_Modified_Ext__c/fields/Hierarchy_Name__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Name__c</fullName>
    <label>Hierarchy Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>