force-app/main/default/objects/Customer_Account_Modified_Ext__c/fields/Sales_Organization__c.field-meta.xml
<CustomField>
    <fullName>Sales_Organization__c</fullName>
    <label>Sales Organization</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>