force-app/main/default/objects/Customer_Account_Modified_Ext__c/fields/SAP_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Account_Number__c</fullName>
    <externalId>true</externalId>
    <label>SAP Account Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>